# drone

./: plan.md  pyproject.toml
drone/: __init__.py
drone/agent/: __init__.py  react_loop.py
drone/providers/: __init__.py  base.py  openai.py
drone/tools/: __init__.py  bash.py  edit.py  read.py  tools.py  write.py
examples/: basic.py
