[project]
name = "drone"
version = "0.1.0"
description = "A minimal ReAct agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=2.21.0",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["drone*"]
